--- a/src/Autodash.Core/UI/Views/GridConfig.cshtml
+++ b/src/Autodash.Core/UI/Views/GridConfig.cshtml
@@ -3,6 +3,11 @@
     Layout = "_Layout.cshtml";
 }
 
+<ol class="breadcrumb mt10">
+    <li><a href="/">Home</a></li>
+    <li class="active">Grid</li>
+</ol>
+
 <h1>Selenium Grid</h1>
 
 <form method="post" enctype="application/x-www-form-urlencoded" action="/grid">
