--- a/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
+++ b/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
@@ -4,6 +4,13 @@
     Layout = "_Layout.cshtml";
 }
 
+<ol class="breadcrumb mt10">
+    <li><a href="/">Home</a></li>
+    <li><a href="/projects/@Model.Suite.ProjectId">Project</a></li>
+    <li class="active">Test Suite</li>
+</ol>
+
+
 <div class="row">
     <div class="col-md-6">
         <h1>@Model.Suite.Name</h1>
