--- a/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
+++ b/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
@@ -59,9 +59,7 @@
                     <div class="form-group">
                         <label for="SuiteName">Environment Url</label>
                         <input type="text" class="form-control" name="EnvironmentUrl" value="@Model.Suite.Configuration.EnvironmentUrl" required maxlength="100" />
-                        <p class="help-block">
-                            Enter the root url. Ex: http://www.some-url.com
-                        </p>
+                        <p class="help-block">Enter the root url. Ex: http://www.some-url.com</p>
                     </div>
 
                     <div class="form-group">
