--- a/src/Autodash.Core/UI/Views/CreateProject.cshtml
+++ b/src/Autodash.Core/UI/Views/CreateProject.cshtml
@@ -23,6 +23,12 @@
         <label for="Description">Description</label>
         <input type="text" class="form-control" name="Description" required maxlength="500">
     </div>
+    
+    <div class="form-group">
+        <label for="MemberEmails">Member Emails</label>
+        <input type="text" class="form-control" name="MemberEmails" required maxlength="500">
+        <p class="help-block">Enter emails separated by comma.</p>
+    </div>
 
     <button type="submit" class="btn btn-success">Submit</button>
 </form>
