--- a/src/Autodash.Core/UI/Content/main.css
+++ b/src/Autodash.Core/UI/Content/main.css
@@ -206,13 +206,18 @@ a.thumbnail.active {
 .bg-danger{
     background-color: #d9534f;
 }
+.bg-warning{
+    background-color: #f0ad4e;
+}
 .text-success {
     color:#5cb85c;
 }
 .text-danger {
     color: #d9534f;
 }
-
+.text-warning{
+    background-color: #f0ad4e;
+}
 .main-content{
     padding-top:50px;
 }
