--- a/src/Autodash.Core/UI/Views/_Layout.cshtml
+++ b/src/Autodash.Core/UI/Views/_Layout.cshtml
@@ -42,6 +42,7 @@
                 <ul class="nav navbar-nav">
                     <li class="@(IsCurrentRoute(true, "projects", "suite", "run") ? "active" : "")"><a href="/">Projects</a></li>
                     <li class="@(IsCurrentRoute(false, "grid") ? "active" : "")"><a href="/grid">Grid</a></li>
+                    <li class="@(IsCurrentRoute(false, "email") ? "active" : "")"><a href="/email">Email</a></li>
                 </ul>
                 <div class="col-sm-3 pull-right text-right hidden-xs hidden-sm">
                     <img src="http://static.carnivalcloud.com/~/media/Images/Header2013/carnival-logo png.ashx" style="margin-top: 4px;" />
