--- a/src/Autodash.Core/UI/Views/Projects.cshtml
+++ b/src/Autodash.Core/UI/Views/Projects.cshtml
@@ -63,7 +63,7 @@
     function createChart(runs, element) {
         var data = new google.visualization.DataTable();
         data.addColumn('number', 'Run #');
-        data.addColumn('number', 'Took');
+        data.addColumn('number', 'Duration');
         data.addColumn({ type: 'string', role: 'style' });
 
         data.addRows(runs);
