--- a/src/Autodash.Core/UI/Views/Projects.cshtml
+++ b/src/Autodash.Core/UI/Views/Projects.cshtml
@@ -13,7 +13,7 @@
 
     @foreach (var proj in Model.Projects)
     {
-        <div class="col-sm-4">
+        <div class="col-sm-4 project-box">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3 class="panel-title" id="panel-title">
@@ -38,7 +38,6 @@
             </div>
         </div>
     }
-
 </div>
 
 <script src="https://www.google.com/jsapi"></script>
